--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+
 
 :root {
   --background: #ffffff;
@@ -24,7 +27,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   height: 100vh;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: 'Roboto Mono', monospace, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .nav-link {
@@ -46,4 +49,8 @@ body {
 
 .nav-link:hover::before {
   width: 100%;
+}
+
+.btn  {
+  border-radius: 8px;
 }
